# winter_school

./: CMakeLists.txt  README.md  go.mod  main.cpp  visual.py
algorithms/: PriorityQueue.go  bellmanFord.go  bellmanFord_test.go  dijkstra.go  dijkstra_test.go  sort.go
algorithms/test/: bellmanFord_test.go  dijkstra_test.go  sort_test.go
algorithms/unionfind/: unionfind.go  unionfind_test.go
cmd/: main_day1.go  main_day2.go  main_day3.go
distributed/: consensus_doc.md  leader_election.go  leader_election_base_f.go  leader_election_ring.go1
distributed/raft/: raft.go  raft_base.go
distributed/test/: coll_test.go  err_test.go  leader_election_test.go  ring_test.go
graph/: fs.go  graph.go
graph/test/: fs_test.go  graph_test.go
mst/: mst.go  mst_test.go
output/: output.go
src/: channel.cpp  channel.h  coder.cpp  coder.h  gen_data.cpp  gen_data.h  orchestrator.cpp  orchestrator.h
stack_queue/: queue.go  stack.go
test/: main_day2.go
